Fjernet gamle brev og vedtak felt fra Behandlingsresultat og tilhørende kodeverk. Fjernet Fagsak#til_infotrygd felt